PySCF 1.5 alpha (2018-03-??)
----------------------------
* Added
  - ddCOSMO solvent model
  - VV10 NLC functional for RKS and UKS
  - range-separated hybrid feature for RKS and UKS
  - IBO for molecular and PBC systems
  - UHF analytical nuclear Hessian
  - UKS analytical nuclear Hessian
* Improved
  - Support of setting omp threads in FCI solver


PySCF 1.4.1 (201?-?-?)
----------------------
* Bugfix
  - meta-GGA functional detection code in XC parser
  - Orbital symmetry label in mcscf initial guess projection

PySCF 1.4 (2017-10-05)
----------------------
* Improved
  - Kinetic energy cutoff estimation
  - Density fitting default auxiliary basis
  - Memory usage for FFTDF module
  - libxc interface
* Bugfix
  - KUHF dimension error in smearing function
  - SCF results inconsistency in chkfile and SOSCF solver
  - OMP stack overflow in GTO basis evaluator
  - Default grids in DFT gen_grid function for system with ECP/PP
  - mol.intor function to generate STG and YP integrals in 8-fold symmetry
  - TDDFT analytical gradients
  - DMRG-CI runtime scratch path
  - PBC GDF integrals for auxiliary basis with g functions
  - post-HF initialization function when mean-field object is DF-SOSCF method
  - Single orbital localization
  - Race condition in MP2 IO


PySCF 1.4 beta (2017-08-22)
---------------------------
* Added
  - Generalized Hartree-Fock (GHF)
  - Second order SCF solver for GHF
  - non-relativistic UHF, UKS g-tensor (with various SOC approximations)
  - non-relativistic UHF, UKS hyperfine coupling
  - SHCI interface to Dice program
  - spin-orbital CISD
  - UCISD and UCISD 1- and 2-RDM
  - Restricted CC2 method
  - Density-fitting CCSD
  - Heat-bath selected CI (HCI) spin-orbital 1- and 2-RDM
  - "scanner" function for HF, DFT and CCSD to simplify energy or
    gradients scanning for systems of different geometry.
  - Interface to pyberny geometry optimizer (geometry optimization for
    RHF, RKS and RCCSD are supported).
* Improved